--- a/ansible/playbooks/install_test_pve.yml
+++ b/ansible/playbooks/install_test_pve.yml
@@ -2,7 +2,7 @@
   hosts: localhost
   gather_facts: yes
   vars:
-    log_path: "/var/log/usr_logs"
+    log_path: "/var/log/ansible.log"
     iso_dir: "/rpool1/share/Common/Softwares/ISO files"
     proxmox_iso_dir: "/var/lib/vz/template/iso"
     ip_config_path: "../../config/ip.yml"
@@ -19,12 +19,6 @@
     - name: Get the Proxmox server IP address
       set_fact:
         pve_ip: "{{ pve_config.server.ip_address }}"
-
-    - name: Ensure log file exists
-      ansible.builtin.file:
-        path: "{{ log_path }}"
-        state: touch
-        mode: '0644'
 
     - name: Find all ISO files
       ansible.builtin.find:
@@ -55,34 +49,8 @@
       delegate_to: "{{ pve_ip }}"
       when: not existing_iso.stat.exists
       register: copy_result
-      notify:
-        - Log success or failure
 
     - name: Notify if the ISO already exists
       ansible.builtin.debug:
         msg: "The latest ISO {{ iso_files.files[0].path | basename }} is already present on Proxmox. Skipping copy."
       when: existing_iso.stat.exists
-
-    - name: Log if ISO already exists
-      ansible.builtin.lineinfile:
-        path: "{{ log_path }}"
-        line: "{{ ansible_date_time.iso8601 }} - INFO: ISO {{ iso_files.files[0].path | basename }} already exists on Proxmox."
-        create: yes
-      when: existing_iso.stat.exists
-
-    - name: Log success or failure
-      ansible.builtin.lineinfile:
-        path: "{{ log_path }}"
-        line: "{{ ansible_date_time.iso8601 }} - {{ 'SUCCESS: ISO copied' if copy_result is succeeded else 'ERROR: Failed to copy ISO' }}"
-        create: yes
-
-    - name: Log task completion
-      ansible.builtin.debug:
-        msg: "Ansible task completed successfully on {{ ansible_date_time.iso8601 }}"
-
-  handlers:
-    - name: Log success or failure
-      ansible.builtin.lineinfile:
-        path: "{{ log_path }}"
-        line: "{{ ansible_date_time.iso8601 }} - {{ 'SUCCESS: ISO copied' if copy_result is succeeded else 'ERROR: Failed to copy ISO' }}"
-        create: yes
