Updated .gitinnore to ignore .lock...odt

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ desktop.ini     # Windows
 .vscode/        # VS Code workspace settings
 
 # Ignore temporary and lock files
-*~lock*          # General lock files
+*~lock.*          # General lock files
 
 # Ignore logs and temp files
 *.log           # Log files
@@ -18,5 +18,5 @@ desktop.ini     # Windows
 .gitignore      # Ignore itself (not needed, but safe)
 
 # User Archive folder
-*rchive\*
+*rchive*
 
