restored deleted files and ignored BOM.txt

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ desktop.ini     # Windows
 # Ignore Git-specific files
 .gitignore      # Ignore itself (not needed, but safe)
 
-# User Archive folder
+# User folder
 *rchive*
+
+# User files
+BOM.txt 
 
