--- a/ansible/roles/users/defaults/main.yml
+++ b/ansible/roles/users/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
 admin_users:
-  - username: prodadmin
-    pubkey: "ssh-ed25519 AAAA...replace_this_with_your_key... ansible@control-node"
+  - username: rumie
+    pubkey: "AAAAC3NzaC1lZDI1NTE5AAAAINYpxBhT+jt0GY0Cpk4RTwhpzGanbOYzd2KFhpFQ8cN4 ansible@control-node"
