--- a/ansible/inventories/prod/group_vars/all.yml
+++ b/ansible/inventories/prod/group_vars/all.yml
@@ -1,3 +1,3 @@
 admin_users:
   - username: prodadmin
-    pubkey: "ssh-ed25519 AAAA...dev-user-key... dev@control-node"
+    pubkey: "AAAAC3NzaC1lZDI1NTE5AAAAINYpxBhT+jt0GY0Cpk4RTwhpzGanbOYzd2KFhpFQ8cN4 ansible@control-node"
