--- a/ansible/playbooks/validate-bootstrap.yml
+++ b/ansible/playbooks/validate-bootstrap.yml
@@ -1,8 +1,22 @@
 ---
-- name: Validate Bootstrap Requirements
+- name: Validate Bootstrap Essentials
   hosts: all
   become: false
+  gather_facts: false
+
+  vars:
+    bootstrap_packages:
+      - sudo
+      - vim
+      - curl
+      - wget
+      - zip
+      - unzip
+      - tmux
+      - python3
+      - pip3
+      - rsync
+      - gpg
 
   roles:
     - validate-bootstrap
-
