--- a/ansible/roles/bootstrap/tasks/main.yml
+++ b/ansible/roles/bootstrap/tasks/main.yml
@@ -1,20 +1,18 @@
 ---
+# Install essential system packages
 - name: Ensure required packages are installed
   ansible.builtin.apt:
-    name:
-      - sudo
-      - vim
-      - curl
-      - python3
-      - python3-pip
-      - tmux
+    name: "{{ bootstrap_packages }}"
     state: present
     update_cache: yes
 
+# Set system timezone
 - name: Set timezone
   community.general.timezone:
-    name: "{{ timezone }}"
+    name: "{{ bootstrap_timezone }}"
 
+
+# Create the ansible user with sudo access
 - name: Create ansible user
   ansible.builtin.user:
     name: "{{ bootstrap_user }}"
@@ -24,12 +22,14 @@
     create_home: yes
     state: present
 
+# Add public SSH key to the ansible user
 - name: Add SSH key for ansible user
   ansible.posix.authorized_key:
     user: "{{ bootstrap_user }}"
     state: present
     key: "{{ lookup('file', 'files/ansible_id_rsa.pub') }}"
 
+# Allow the ansible user to sudo without password
 - name: Allow ansible user passwordless sudo
   ansible.builtin.copy:
     dest: "/etc/sudoers.d/{{ bootstrap_user }}"
