manual user not fixed yet.

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-inventory = inventory.yml    
+inventory = inventory.yml
+playbooks = /playbooks
 remote_user = ansible-user 
 private_key_file = ~/.ssh/ansible_id_rsa_ansible-user
 roles_path = ./roles
