--- a/ansible/roles/template-vm/defaults/main.yml
+++ b/ansible/roles/template-vm/defaults/main.yml
@@ -1,19 +1,23 @@
 # roles/template-vm/defaults/main.yml
 
 # Template VM Settings
-template_vm_id: 900
-template_vm_name: ubuntu-2404-template
+template_vm_id: 904   
+template_vm_name: ubuntu-2204-template
 template_node: pve-main
 template_storage: local-zfs
 template_disk_size: 32G
 template_memory: 1024
+template_cores: 1
+template_sockets: 1
 template_net_bridge: vmbr0
 
+
+
 # Cloud-Init Image Info
-template_image_url: https://cloud-images.ubuntu.com/minimal/releases/noble/release/ubuntu-24.04-minimal-cloudimg-amd64.img
-template_image_file: ubuntu-24.04.qcow2
+template_image_url: "https://cloud-images.ubuntu.com/jammy/current/jammy-server-cloudimg-amd64.img"
+template_image_file: ubuntu-22.04.qcow2
 
 # Cloud-Init User
-template_user: root
-template_password: Rumie_12
-template_ssh_key: "{{ lookup('file', '~/.ssh/ansible_id_rsa_ansible-user.pub') }}"
+template_user: ansible-user
+template_ssh_key_file: ansible-user.pub
+template_ssh_key: "{{ lookup('file', playbook_dir + '/../files/' + template_ssh_key_file) }}"
