Added secrets and samba file share.

--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -18,7 +18,7 @@ all:
     pve_test:
       hosts:
         pve-test:
-    file_server:
+    file_servers:
       hosts:
         file-server:
     print_server:
