--- a/ansible/playbooks/harden.yml
+++ b/ansible/playbooks/harden.yml
@@ -1,6 +1,19 @@
 ---
-- name: Apply security hardening
+- name: Harden Ubuntu VM
   hosts: all
   become: true
+
+  pre_tasks:
+    - name: Update apt cache
+      ansible.builtin.apt:
+        update_cache: yes
+        cache_valid_time: 3600
+
+    - name: Upgrade all packages
+      ansible.builtin.apt:
+        upgrade: dist
+        autoremove: yes
+        autoclean: yes
+
   roles:
-    - { role: harden, tags: [harden] }
+    - role: harden
