--- a/ansible/playbooks/create-file-server.yml
+++ b/ansible/playbooks/create-file-server.yml
@@ -4,7 +4,7 @@
   become: true
 
   roles:
-    - role: create-file-server
+    - role: file-server
       tags:
         - samba
         - fileshare
