Print server works but the printer complains about papaer size. the paper is A4 which is set by CUPS. Will try not set the default paper size and lt the printer/user  handle it.

--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -21,7 +21,7 @@ all:
     file_servers:
       hosts:
         file-server:
-    print_server:
+    print_servers:
       hosts:
         print-server:
     scan_server:
