refactored to modular code and added usb for pve host.

--- a/ansible/group_vars/all/all.yml
+++ b/ansible/group_vars/all/all.yml
@@ -1,2 +1,4 @@
+###ansible/group_vars/all
 fallback_root_password: "{{ vault_root_password }}"
 samba_users: "{{ vault_samba_users }}"
+cups_admins: "{{vault_cups_admins}}"
