Updated bootstrap, harden and file-server(refactored for HDD and hostname)

--- a/ansible/roles/bootstrap/tasks/main.yml
+++ b/ansible/roles/bootstrap/tasks/main.yml
@@ -1,6 +1,4 @@
 ---
-
-
 # Install essential system packages
 - name: Ensure required packages are installed
   ansible.builtin.apt:
@@ -39,3 +37,4 @@
     owner: root
     group: root
     mode: '0440'
+    notify: Restart sshd
