--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -8,4 +8,5 @@ host_key_checking = False
 retry_files_enabled = False  
 forks = 10                   
 timeout = 30                 
-stdout_callback = yaml       
+stdout_callback = yaml
+deprecation_warnings=False
