--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
 inventory = inventory.yml
 playbooks = /playbooks
-remote_user = ansible-user 
-private_key_file = ~/.ssh/ansible_id_rsa_ansible-user
+remote_user = ansible
+#private_key_file = ~/.ssh/ansible_id_rsa_ansible-user
 roles_path = ./roles
 host_key_checking = False    
 retry_files_enabled = False  
