--- a/ansible/roles/bootstrap/tasks/main.yml
+++ b/ansible/roles/bootstrap/tasks/main.yml
@@ -27,9 +27,8 @@
   ansible.posix.authorized_key:
     user: "{{ bootstrap_user }}"
     state: present
-    key: "{{ lookup('file', 'files/ansible_id_rsa_ansible-user.pub') }}"
+    key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_ansible_ed25519.pub') }}"
 
-# Allow the ansible user to sudo without password
 - name: Allow ansible user passwordless sudo
   ansible.builtin.copy:
     dest: "/etc/sudoers.d/{{ bootstrap_user }}"
@@ -37,4 +36,7 @@
     owner: root
     group: root
     mode: '0440'
-    notify: Restart sshd
+  notify:
+    - Restart sshd
+
+
