--- a/ansible/roles/bootstrap/tasks/main.yml
+++ b/ansible/roles/bootstrap/tasks/main.yml
@@ -23,11 +23,14 @@
     state: present
 
 # Add public SSH key to the ansible user
-- name: Add SSH key for ansible user
-  ansible.posix.authorized_key:
-    user: "{{ bootstrap_user }}"
-    state: present
-    key: "{{ lookup('file', lookup('env','HOME') + '/.ssh/id_ansible_ed25519.pub') }}"
+- name: Ensure .ssh directory exists for ansible user
+  file:
+    path: "/home/{{ bootstrap_user }}/.ssh"
+    state: directory
+    owner: "{{ bootstrap_user }}"
+    group: "{{ bootstrap_user }}"
+    mode: '0700'
+
 
 - name: Allow ansible user passwordless sudo
   ansible.builtin.copy:
@@ -38,5 +41,6 @@
     mode: '0440'
   notify:
     - Restart sshd
+
 
 
