--- a/ansible/roles/create-vm-template/tasks/main.yml
+++ b/ansible/roles/create-vm-template/tasks/main.yml
@@ -21,7 +21,7 @@
         - "/var/lib/vz/snippets"
       delegate_to: "{{ template_node }}"
 
-    - name: Download official Ubuntu cloud image
+    - name: Download Ubuntu cloud image (QCOW2)
       get_url:
         url: "{{ template_image_url }}"
         dest: "/var/lib/vz/template/{{ template_image_file }}"
@@ -29,27 +29,21 @@
         force: yes
       delegate_to: "{{ template_node }}"
 
-    - name: Convert qcow2 image to raw for ZFS
+    - name: Rename .img to .qcow2 (if needed)
       command: >
-        qemu-img convert -f qcow2 -O raw
-        /var/lib/vz/template/jammy-server-cloudimg-amd64.qcow2
-        /var/lib/vz/template/jammy-server-cloudimg-amd64.raw
+        mv /var/lib/vz/template/{{ template_image_file }}
+           /var/lib/vz/template/{{ template_qcow2_name }}
       args:
-        creates: "/var/lib/vz/template/jammy-server-cloudimg-amd64.raw"
+        creates: "/var/lib/vz/template/{{ template_qcow2_name }}"
+      when: template_image_file.endswith('.img')
       delegate_to: "{{ template_node }}"
 
-    - name: Resize raw image disk
+    - name: Resize the downloaded cloud image
       command: >
-        qemu-img resize /var/lib/vz/template/jammy-server-cloudimg-amd64.raw {{ template_disk_size }}
+        qemu-img resize /var/lib/vz/template/{{ template_qcow2_name }} {{ template_disk_size }}
       delegate_to: "{{ template_node }}"
 
-    - name: Copy cloud-init user-data
-      template:
-        src: "files/user-data.yml.j2"
-        dest: "/var/lib/vz/snippets/user-data.yml"
-      delegate_to: "{{ template_node }}"
-
-    - name: Create base VM
+    - name: Create VM shell
       command: >
         qm create {{ template_vm_id }}
         --name {{ template_vm_name }}
@@ -64,24 +58,42 @@
         --vga serial0
       delegate_to: "{{ template_node }}"
 
-    - name: Import raw disk into Proxmox (ZFS)
+    - name: Import cloud image disk
       command: >
-        qm importdisk {{ template_vm_id }} /var/lib/vz/template/jammy-server-cloudimg-amd64.raw {{ template_storage }}
+        qm importdisk {{ template_vm_id }}
+        /var/lib/vz/template/{{ template_qcow2_name }}
+        {{ template_storage }}
       delegate_to: "{{ template_node }}"
 
-    - name: Final VM configuration
+    - name: Attach disk and cloud-init
       command: >
         qm set {{ template_vm_id }}
-        --scsi0 {{ template_storage }}:vm-{{ template_vm_id }}-disk-0,ssd=1,discard=on
+        --scsi0 {{ template_storage }}:vm-{{ template_vm_id }}-disk-0
         --ide2 {{ template_storage }}:cloudinit
         --boot order=scsi0;ide2;net0
-        --cicustom "user=local:snippets/user-data.yml"
         --ipconfig0 ip=dhcp
       delegate_to: "{{ template_node }}"
 
-    - name: Convert VM to template
+    - name: Copy cloud-init user-data snippet
+      template:
+        src: user-data.yml.j2
+        dest: /var/lib/vz/snippets/user-data.yml
+      delegate_to: "{{ template_node }}"
+
+    - name: Set cloud-init config with cicustom
       command: >
-        qm template {{ template_vm_id }}
+        qm set {{ template_vm_id }}
+        --cicustom "user=local:snippets/user-data.yml"
+      delegate_to: "{{ template_node }}"
+    - name: Set cloud-init user and password
+      command: >
+        qm set {{ template_vm_id }}
+        --ciuser {{ template_user }}
+        --cipassword {{ template_password }}
+      delegate_to: "{{ template_node }}"
+
+    - name: Convert to template
+      command: qm template {{ template_vm_id }}
       delegate_to: "{{ template_node }}"
 
   when: not template_vm_stat.stat.exists
