--- a/ansible/roles/shibernate/vars/main.yml
+++ b/ansible/roles/shibernate/vars/main.yml
@@ -1,3 +1,5 @@
 #roles/vars/main.yml
+#shibernate_service_name: shibernate
+#shibernate_oncalendar: "*-*-* 23:30:00"
 shibernate_service_name: shibernate
-shibernate_oncalendar: "*-*-* 23:30:00"
+shibernate_wakeup_offset: 120  # 2 minutes
