Modified ansible.cfg for default key path and disabled playbook path, enabled logging

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,12 +1,13 @@
 [defaults]
 inventory = inventory.yml
-playbooks = /playbooks
+#playbooks = /playbooks
+roles_path = /roles
 remote_user = ansible
-#private_key_file = ~/.ssh/ansible_id_rsa_ansible-user
-roles_path = ./roles
+private_key_file = ~/.ssh/id_ansible_ed25519
 host_key_checking = False    
 retry_files_enabled = False  
 forks = 10                   
 timeout = 30                 
 stdout_callback = yaml
 deprecation_warnings=False
+log_path = ./ansible.log
