Modified for fstab to automount the virtiofs folder

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,6 @@
 [defaults]
 inventory = inventory.yml
-#playbooks = /playbooks
-roles_path = /roles
+roles_path = roles
 remote_user = ansible
 private_key_file = ~/.ssh/id_ansible_ed25519
 host_key_checking = False    
@@ -9,5 +8,7 @@ retry_files_enabled = False
 forks = 10                   
 timeout = 30                 
 stdout_callback = yaml
-deprecation_warnings=False
 log_path = ./ansible.log
+deprecation_warnings = False
+error_on_missing_handler = True
+verbosity = 1
